add card info responsive

--- a/app/index.html
+++ b/app/index.html
@@ -221,7 +221,7 @@
                 </li>
               </ul>
             </div>
-            <a class="card__btn btn btn--lg" href="#">Оформить карту</a>
+            <a class="card__btn btn btn--lg" href="#">Оформить <span>карту</span></a>
           </div>
           <div class="cards__item card card--hover card--blue swiper-slide">
             <div class="card__inner">
@@ -249,7 +249,7 @@
                 </li>
               </ul>
             </div>
-            <a class="card__btn btn btn--lg" href="#">Оформить карту</a>
+            <a class="card__btn btn btn--lg" href="#">Оформить <span>карту</span></a>
           </div>
           <div class="cards__item card card--hover card--white swiper-slide">
             <div class="card__inner">
@@ -277,7 +277,7 @@
                 </li>
               </ul>
             </div>
-            <a class="card__btn btn btn--lg" href="#">Оформить карту</a>
+            <a class="card__btn btn btn--lg" href="#">Оформить <span>карту</span></a>
           </div>
           <div class="cards__item card card--hover card--yellow swiper-slide">
             <div class="card__inner">
@@ -305,7 +305,7 @@
                 </li>
               </ul>
             </div>
-            <a class="card__btn btn btn--lg" href="#">Оформить карту</a>
+            <a class="card__btn btn btn--lg" href="#">Оформить <span>карту</span></a>
           </div>
         </div>
       </div>
